--- a/WebApp/backend/package.json
+++ b/WebApp/backend/package.json
@@ -4,8 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "nodemon": "^2.0.7",
+    "spotify-web-api-node": "^5.0.2"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "request": "^2.88.2"
+  }
 }
